# enigma-messenger

./: .gitignore  API.md  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  LICENSE  MIGRATIONS.md  README.md  RELEASE.md  deny.toml
.github/workflows/: ci.yml  release.yml
bins/enigma-cli/: Cargo.toml
bins/enigma-cli/src/: main.rs
bins/enigma-daemon/: Cargo.toml
bins/enigma-daemon/src/: config.rs  lib.rs  main.rs  sfu_adapter.rs
bins/enigma-daemon/src/calls/: manager.rs  mod.rs  types.rs
bins/enigma-daemon/src/clients/: mod.rs  registry_http.rs  relay_http.rs
bins/enigma-daemon/src/tests/: boot_metrics_bench.rs  calls_tests.rs  config_validation_tests.rs  harness.rs  mod.rs  ui_api_tests.rs
bins/enigma-daemon/src/tests/fixtures/: error_auth.json  error_conflict.json  error_internal.json  error_not_found.json  error_validation.json
crates/enigma-api/: Cargo.toml  README.md
crates/enigma-api/src/: identity_envelope.rs  lib.rs  types.rs  validation.rs
crates/enigma-api/tests/: api_contract.rs
crates/enigma-core/: Cargo.toml  README.md
crates/enigma-core/src/: attachments.rs  channels.rs  config.rs  directory.rs  envelope_crypto.rs  error.rs  event.rs  extensions.rs  group_crypto.rs  groups.rs  identity.rs  ids.rs  introspection.rs  lib.rs  messaging.rs  migrations.rs  node.rs  outbox.rs  packet.rs  policy.rs  proto_v2.rs  ratchet.rs  receipts.rs  relay.rs  session.rs  sync.rs  time.rs
crates/enigma-core/src/crypto/: mod.rs  x3dh.rs
crates/enigma-core/src/tests/: attachments_tests.rs  directory_tests.rs  envelope_tests.rs  groups_channels_tests.rs  hybrid_fallback_tests.rs  identity_tests.rs  identity_v2_tests.rs  introspection_tests.rs  messaging_tests.rs  migrations_tests.rs  mod.rs  multidevice_tests.rs  negative_tests.rs  offline_relay_tests.rs  outbox_retry_tests.rs  proto_v2_tests.rs  relay_ack_persistence_tests.rs  sender_keys_tests.rs  transport_unit_tests.rs
crates/enigma-ui-api/: Cargo.toml
crates/enigma-ui-api/src/: lib.rs
crates/enigma-ui-api/tests/: serialization_tests.rs
deployment/: backup.sh  check_systemd_hardening.md  local-dev.md  restore.sh  security.md  single-node-prod.md  smoke.sh  upgrade.md
deployment/etc/enigma/: daemon.toml  registry.toml  relay.toml  sfu.toml
docs/: api.md  architecture.md  distribution.md  extension_points.md  groups_channels.md  messaging.md  offline_relay.md  overview.md  patches_dev.md  storage_keys.md  testing.md
fuzz/: Cargo.toml
scripts/: check_deployment_docs.sh  check_docs.sh  check_versions.sh  release_build.sh
systemd/: enigma-daemon.service  enigma-node-registry.service  enigma-relay.service
