[workspace]
members = [
    "crates/enigma-core",
    "crates/enigma-api",
    "crates/enigma-ui-api",
    "bins/enigma-cli",
    "bins/enigma-daemon"
]
resolver = "2"

[workspace.package]
authors = ["Sébastien TOUILLEUX (Gladius33)"]
version = "0.0.3"
license = "MIT"
repository = "https://github.com/gladius33/enigma-messenger"
homepage = "https://github.com/gladius33/enigma-messenger"
description = "Enigma messenger orchestrator workspace"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
blake3 = "1"
async-trait = "0.1"
hex = "0.4"
enigma-sfu = "=0.2.0"
enigma-relay = "=0.0.3"
enigma-node-registry = { version = "=0.0.2", default-features = false }
enigma-node-types = "=0.0.1"
enigma-storage = "=0.0.1"
