[package]
name = "enigma-cli"
version = "0.0.2"
edition = "2021"
authors = ["Sébastien TOUILLEUX (Gladius33)"]
license = "MIT"
description = "CLI for enigma-core smoke testing"
repository = "https://github.com/gladius33/enigma-messenger"
homepage = "https://github.com/gladius33/enigma-messenger"

[dependencies]
clap = { version = "4", features = ["derive"] }
enigma-daemon = { path = "../enigma-daemon", version = "0.0.3" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
