[package]
name = "enigma-cli"
version = "0.0.3"
edition = "2021"
authors = ["Sébastien TOUILLEUX (Gladius33)"]
license = "MIT"
description = "CLI for enigma-core smoke testing"
repository = "https://github.com/gladius33/enigma-messenger"
homepage = "https://github.com/gladius33/enigma-messenger"

[dependencies]
clap = { version = "4", features = ["derive"] }
enigma-core = { path = "../../crates/enigma-core", version = "0.0.4", default-features = false, features = ["proto-v2"] }
enigma-daemon = { path = "../enigma-daemon", version = "0.0.4" }
enigma-ui-api = { path = "../../crates/enigma-ui-api", version = "0.0.1" }
enigma-storage = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
