[package]
name = "enigma-daemon"
version = "0.0.1"
edition = "2021"
authors = ["Sébastien TOUILLEUX (Gladius33)"]
license = "MIT"
description = "Background daemon for enigma-core runtime"
repository = "https://github.com/gladius33/enigma-messenger"
homepage = "https://github.com/gladius33/enigma-messenger"

[features]
default = []
webrtc = ["enigma-transport-webrtc"]

[dependencies]
enigma-core = { path = "../../crates/enigma-core", features = ["dev"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
enigma-sfu = { workspace = true }
enigma-storage = { version = "0.0.1" }
toml = "0.8"
env_logger = "0.11"
log = "0.4"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
thiserror = { workspace = true }
enigma-transport-webrtc = { version = "0.1.1", optional = true }
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
