[package]
name = "enigma-core"
version = "0.0.1"
edition = "2021"
authors = ["Sébastien TOUILLEUX (Gladius33)"]
license = "MIT"
description = "Core orchestrator runtime for Enigma messenger"
repository = "https://github.com/gladius33/enigma-messenger"
homepage = "https://github.com/gladius33/enigma-messenger"
documentation = "https://docs.rs/enigma-core"

[features]
default = []
dev = []
sfu = ["enigma-sfu"]
metrics = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
enigma-api = { path = "../enigma-api" }
enigma-node-types = { path = "../../vendor/enigma-node-types" }
enigma-node-client = { path = "../../vendor/enigma-node-client" }
enigma-packet = { path = "../../vendor/enigma-packet" }
enigma-aead = { path = "../../vendor/enigma-aead" }
enigma-storage = { path = "../../vendor/enigma-storage" }
enigma-relay = { path = "../../vendor/enigma-relay" }
enigma-signaling = { path = "../../vendor/enigma-signaling" }
enigma-transport-webrtc = { path = "../../vendor/enigma-transport-webrtc" }
enigma-sfu = { path = "../../vendor/enigma-sfu", optional = true }
