[package]
name = "enigma-core"
version = "0.0.1"
edition = "2021"
authors = ["Sébastien TOUILLEUX (Gladius33)"]
license = "MIT"
description = "Core orchestrator runtime for Enigma messenger"
repository = "https://github.com/gladius33/enigma-messenger"
homepage = "https://github.com/gladius33/enigma-messenger"
documentation = "https://docs.rs/enigma-core"

[features]
default = []
dev = []
metrics = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
base64 = "0.21"
enigma-api = { path = "../enigma-api", version = "0.0.1" }
enigma-node-types = { version = "0.0.1" }
enigma-aead = { version = "0.1.1" }
enigma-storage = { version = "0.0.1" }
