[package]
name = "enigma-core"
version = "0.0.4"
edition = "2021"
authors = ["Sébastien TOUILLEUX (Gladius33)"]
license = "MIT"
description = "Core orchestrator runtime for Enigma messenger"
repository = "https://github.com/gladius33/enigma-messenger"
homepage = "https://github.com/gladius33/enigma-messenger"
documentation = "https://docs.rs/enigma-core"

[features]
default = ["x3dh", "ratchet", "proto-v2"]
dev = []
sender-keys = []
metrics = []
x3dh = []
ratchet = []
proto-v2 = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
base64 = "0.21"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
enigma-api = { path = "../enigma-api", version = "0.0.1" }
enigma-node-types = { workspace = true }
enigma-aead = { version = "=0.1.1" }
enigma-storage = { workspace = true }
enigma-node-registry = { workspace = true, default-features = false }

[dev-dependencies]
tempfile = "3"
